# SWIS

./: .gitignore  CMakeLists.txt  LICENSE  README.md  inputcard_AF8x8.inp  makefile  makefile_morroco
examples/square_lattice/: README  disp_unfol_multi.gnu  input_spirit.cfg  inputcard_Mn5Ge3.inp  kpath.py  lattice_sky.py  runspinwave.sh  runspirit.py  scale_pair.py
examples/square_lattice/inputfiles/: pair.txt  pair_temp.txt
examples/square_lattice/spirit_output/: spinconfig_final.ovf  spinconfig_initial.ovf
mininum_folder_setup/: input_XXXX.cfg  inputcard_XXXX.inp  runspinwave.sh
mininum_folder_setup/inputfiles/: Jij_pair.spirit
mininum_folder_setup/scripts/: disp_unfol_multiPNG4panelsTHIN.gnu  disp_unfol_multi_3panels.gnu  double_unitcell.py  double_unitcell2.py  generate_pairs.py  kpath.py  occupation.gnu  plot_dispersion.gnu  scale_pair.py
mininum_folder_setup/spirit_output/: spinconfig_final.ovf  spinconfig_initial.ovf
scripts/: calculation_manager_noncol.py  disp_unfol_multi.gnu  double_unitcell.py  kpath.py  lattice_sky.py  occupation.gnu  runspinwave.sh  scale_pair.py  total_energy_vs_Bfield.py
scripts/angular momentum visualization/: angular_momenta.py  disp_unfol_multiPNG.gnu  inputcard_AF2x2c2x2MESH.inp  inputcard_AF2x2c2x2PATH.inp  runspinwave.sh
scripts/angular momentum visualization/inputfiles/: pair_AF20x20SK.txt  pair_AF20x20SKz.txt  spinconfig_AF2x2c2x2.txt
source/: bogoliubov_transf.f90  mod_global.f90  spinwavesNonCol.f90
source_bkp/: bogoliubov_transf.f90bkp  mod_global.f902 copy  mod_global.f90bkp copy
source_bkp/bkp before spirit more implemented/: bogoliubov_transf.f90  mod_global.f90
source_bkp/bkps/: mod_global.f90
